made following users events
