# src/apis/user/route.ts
@@ -8,7 +8,10 @@ const user = new UserController(prisma);
 
 router.post("/signup", user.signup);
 router.post("/login", user.login);
-
-// router.get("/", checkSession,fetchUsers);
+router.get("/get-events", checkSession, user.getFollowingEvents
+    /* #swagger.security = [{
+            "bearerAuth": []
+    }] */
+); 
 
 export default router;
